# vexiq-simulator

./: .gitignore  ClawbotIQ.out  LICENSE  README.md  requirements.txt  run_simulator.py  test_glb.py
client/: CMakeLists.txt  build.sh  run.sh
client/scenes/: default.scene
client/src/: main.cpp
client/src/ipc/: gamepad.cpp  gamepad.h  python_bridge.cpp  python_bridge.h  subprocess.cpp  subprocess.h
client/src/math/: mat4.cpp  mat4.h  vec3.cpp  vec3.h
client/src/physics/: collision.cpp  collision.h  drivetrain.cpp  drivetrain.h  obb.cpp  obb.h  physics_config.h  robot_config.cpp  robot_config.h  robotdef.cpp  robotdef.h
client/src/platform/: platform.cpp  platform.h
client/src/render/: camera.cpp  camera.h  debug.cpp  debug.h  floor.cpp  floor.h  glb_loader.cpp  glb_loader.h  mesh.cpp  mesh.h  mpd_loader.cpp  mpd_loader.h  objects.cpp  objects.h  shader.cpp  shader.h  text.cpp  text.h
client/src/scene/: scene.cpp  scene.h
docs/: CAD_CONVERSION.md  GLB_CONVERSION_PIPELINE.md  LDCAD_LDRAW_GUIDE.md  PHYSICS_DESIGN.md  ROADMAP.md  SNAPCAD_RENDER_PIPELINE.md  VEX_IQ_CAD_TOOLS_RESEARCH.md  WSL2_GAMEPAD_SETUP.md  physics-analysis.md
examples/: clawbot_code.py
models/: parts_catalog.yaml
models/robots/: ClawbotIQ.config  ClawbotIQ.mpd  ClawbotIQ.robotdef  ClawbotIQ2.mpd  Ike.mpd  Ike.robotdef  colors.mpd  default.mpd  scale.mpd  single.ldr  single.mpd  single_x_90_rotate.mpd  single_y_90_rotate.mpd  single_z_90_rotate.mpd  test1.mpd  white.mpd  yellow.mpd
scripts/: setup_python.sh
simulator/: __init__.py  control_panel.py  gamepad.py  harness.py  ipc_bridge.py  iqpython_parser.py  main.py  test_ursina.py  vex_stub.py  virtual_controller.py  world.py
tools/: batch_convert_step.py  blender_batch_all.py  blender_batch_decimate.py  blender_test_single.py  build_parts_catalog.py  convert_step_to_glb.py  convert_vex_parts.sh  extract_iqpython.py  freecad_convert_step.py  parse_vex_code.py  simplify_mesh.py
tools/cad/: README.md  blender_ldraw_test_single.py  blender_ldraw_to_glb.py  blender_ldraw_to_glb_optimized.py  blender_ldraw_to_glb_vertex_colors.py  generate_robot_def.py  ldraw_parser.py  ldraw_renderer.py  normal_lighting_shader.py  render_ldraw_model.py  robotdef_loader.py  test_robot_frame_ldraw.py  test_robot_frame_ldraw_optimized.py
